collab-frontend/client.css
/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: .05rem solid #fff;
}


/*
 * Base structure
 */
html,
body {
  height: 100%;
  background-color: #222;
}

body {
  display: -ms-flexbox;
  display: flex;
  color: #fff;
  font-family: 'Chivo';font-size: 15px;
  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
}

.cover-container {
  max-width: 30em;
}

.orange {
  color: #f7ab30
}

.red {
  color: #fa4757
}


/*
 * Header
 */

.header-light {
  font-family: 'Chivo Light';
  font-size: 15px
}

.alert {
  margin-left: 0px;
  font-family: 'Chivo';
  font-size: 15px;
  line-height: 15px
}

.label {
  font-family: 'Chivo Black';font-size: 20px;
  margin: 2px
}

.heavy {
  font-family: 'Chivo Black';font-size: 50px;
  line-height: 50px
}

.input {
  border: 1px solid white;
  background-color: #222;
  width: 60%;
  outline: none;
  color: white;
  padding: 6px 20px;
  margin: 0px 0px;
  text-align: left;
  text-decoration: none;
  display: inline-block;
  font-family: 'Chivo';
  font-size: 16px;    
}

.check {
  width: 25px;
  height: 15px;
  background: #555;
  margin: 5px 5px;
  position: relative;
  border-radius: 5px;
}

.button {
  border: 1px solid #f7ab30; 
  background-color: #222;
  color: #f7ab30;
  outline: none;
  padding: 6px 20px;
  margin: 0px 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-family: 'Chivo Black';
  font-size: 16px;
}

.button:focus {
  outline-color: #f7c981;
}

.buttonPanel {
  border: 1px solid #f7ab30; 
  background-color: #222;
  color: #f7ab30;
  outline: none;
  padding: 6px 20px;
  margin: 10px 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-family: 'Chivo Black';
  font-size: 16px;
}

.seedItem {
  margin-top: 20px;
  margin-right: 10px;
  margin-left: 10px;
  padding-top: 10px;
  text-align: center;
  outline-style: solid;
  outline-color: white;
  outline-width: 1px
}

.grid-container {
  display: grid;
  justify-content: center;
  grid-template-columns: auto auto auto auto auto auto auto;
  grid-template-rows: auto auto auto auto auto auto auto;
  padding: 0px;
}

.item0 {
  grid-column-start: 4;
  grid-row-start: 1;
  align-items: center;
  justify-items: center;  
}

.item1 {
  grid-column-start: 3;
  grid-row-start: 2;
  align-items: center;
  justify-items: center;  
}

.item2 {
  grid-column-start: 5;
  grid-row-start: 2;
  align-items: center;
  justify-items: center;  
}

.item3 {
  grid-column-start: 2;
  grid-row-start: 3;
  align-items: center;
  justify-items: center;  
}

.item4 {
  grid-column-start: 4;
  grid-row-start: 3;
  align-items: center;
  justify-items: center;  
}

.item5 {
  grid-column-start: 6;
  grid-row-start: 3;
  align-items: center;
  justify-items: center;  
}

.item6 {
  grid-column-start: 1;
  grid-row-start: 4;
  align-items: center;
  justify-items: center;  
}

.item7 {
  grid-column-start: 3;
  grid-row-start: 4;
  align-items: center;
  justify-items: center;  
}

.item8 {
  grid-column-start: 5;
  grid-row-start: 4;
  align-items: center;
  justify-items: center;  
}

.item9 {
  grid-column-start: 7;
  grid-row-start: 4;
  align-items: center;
  justify-items: center;  
}

.item10 {
  grid-column-start: 2;
  grid-row-start: 5;
  align-items: center;
  justify-items: center;  
}

.item11 {
  grid-column-start: 4;
  grid-row-start: 5;
  align-items: center;
  justify-items: center;  
}

.item12 {
  grid-column-start: 6;
  grid-row-start: 5;
  align-items: center;
  justify-items: center;  
}

.item13 {
  grid-column-start: 3;
  grid-row-start: 6;
  align-items: center;
  justify-items: center;  
}

.item14 {
  grid-column-start: 5;
  grid-row-start: 6;
  align-items: center;
  justify-items: center;  
}

.item15 {
  grid-column-start: 4;
  grid-row-start: 7;
  align-items: center;
  justify-items: center;  
}

.masthead {
  margin-bottom: 2rem;
}

.masthead-brand {
  margin-bottom: 0;
}

.nav-masthead .nav-link {
  padding: .25rem 0;
  font-weight: 700;
  color: rgba(255, 255, 255, .5);
  background-color: transparent;
  border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}

@media (min-width: 48em) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  }
}


/*
 * Cover
 */
.cover {
  padding: 0 1.5rem;
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: 700;
}


/*
 * Footer
 */
.mastfoot {
  color: rgba(255, 255, 255, .5);
}

